k8sexample-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: k8sexample-frontend
    labels:
        app: k8sexample
        role: frontend
spec:
    template:
        metadata:
            name: k8sexample-frontend
            labels:
                app: k8sexample
                role: frontend
        spec:
            serviceAccountName: k8sexample-frontend-sa
            containers:
                - name: k8sexample-frontend
                  image: registry/testfrontend:frontend-v65
                  ports:
                    - containerPort: 3000
    selector:
        matchLabels:
            app: k8sexample
            role: frontend
    replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: k8sexample-backend-a
    labels:
        app: k8sexample
        role: backend-a
spec:
    template:
        metadata:
            name: k8sexample-backend-a
            labels:
                app: k8sexample
                role: backend-a
        spec:
            containers:
                - name: k8sexample-backend-a
                  image: registry/testfrontend:v25
                  ports:
                    - containerPort: 3000
    selector:
        matchLabels:
            app: k8sexample
            role: backend-a
    replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: k8sexample-backend-b
    labels:
        app: k8sexample
        role: backend-b
spec:
    template:
        metadata:
            name: k8sexample-backend-b
            labels:
                app: k8sexample
                role: backend-b
        spec:
            containers:
                - name: k8sexample-backend-b
                  image: registry/testfrontend:v25
                  ports:
                    - containerPort: 3000
    selector:
        matchLabels:
            app: k8sexample
            role: backend-b
    replicas: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: k8sexample
    role: frontend
spec:
  selector:
    app: k8sexample
    role: frontend
  ports:
    - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-a
  labels:
    app: k8sexample
    role: backend-a
spec:
  selector:
    app: k8sexample
    role: backend-a
  ports:
    - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-b
  labels:
    app: k8sexample
    role: backend-b
spec:
  selector:
    app: k8sexample
    role: backend-b
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sexample
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - k8sexample
  rules:
  - host: k8sexample
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
